<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/karla_regular"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvYourName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/karla_regular"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/e_g_john"
                android:textColor="@color/tv_input_color">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEnterYourName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:textColorHint="@color/hint_color"
                    android:textSize="18sp"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/karla"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                tools:text="*Please enter your name" />


            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/purple_500"
                android:fontFamily="@font/karla_regular"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>