<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBrainIcon"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/ic_brain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuizzes"
        android:layout_width="285dp"
        android:layout_height="0dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/karla_regular"
        android:text="@string/quizzes"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintDimensionRatio="1.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBrainIcon" />

    <TextView
        android:id="@+id/tvBrainPower"
        android:layout_width="405dp"
        android:layout_height="0dp"
        android:layout_marginStart="69dp"
        android:fontFamily="@font/karla_regular"
        android:text="@string/enjoy_brain_power"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintDimensionRatio="3.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuizzes" />

    <View
        android:id="@+id/vStartQuizzes"
        android:layout_width="378dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        app:layout_constraintDimensionRatio="4.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBrainPower"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvStartGame"
        android:layout_width="221dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:fontFamily="@font/karla"
        android:gravity="center"
        android:text="@string/start_button"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/vStartQuizzes"
        app:layout_constraintEnd_toEndOf="@id/vStartQuizzes"
        app:layout_constraintStart_toStartOf="@id/vStartQuizzes"
        app:layout_constraintTop_toTopOf="@id/vStartQuizzes" />


</androidx.constraintlayout.widget.ConstraintLayout>


 